Database check in project Details activity. Add validation in add project activity.

--- a/app/src/main/res/layout/fragment_project_details.xml
+++ b/app/src/main/res/layout/fragment_project_details.xml
@@ -27,7 +27,7 @@
         android:id="@+id/sv_project_details"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="20dp">
