--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -59,8 +59,7 @@
                             android:id="@+id/img_profile_edit"
                             android:layout_width="150dp"
                             android:layout_height="150dp"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/photographer_profile" />
+                            android:scaleType="centerCrop" />
 
                     </androidx.cardview.widget.CardView>
 
@@ -83,6 +82,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/brownbold"
                         android:hint="@string/name"
+                        android:inputType="textCapWords"
                         android:layout_margin="20dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -93,6 +93,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/brownbold"
                         android:hint="@string/role"
+                        android:inputType="textCapWords"
                         android:layout_margin="20dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -105,6 +106,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/brownbold"
                         android:hint="@string/email"
+                        android:inputType="textEmailAddress"
                         android:layout_margin="20dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/emp_role" />
@@ -115,6 +117,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/brownbold"
                         android:hint="@string/mobile_number"
+                        android:inputType="number"
                         android:layout_margin="20dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/et_email_text" />
@@ -135,6 +138,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/brownbold"
                         android:hint="@string/date_of_birth"
+                        android:inputType="date"
                         android:layout_margin="20dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/et_gender" />
