1. Retrive user profile data dynamically from fire base.

--- a/app/src/main/res/layout/activity_own_worker_profile.xml
+++ b/app/src/main/res/layout/activity_own_worker_profile.xml
@@ -57,10 +57,10 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
+                    android:id="@+id/profile_image"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/photographer_profile" />
+                    android:scaleType="centerCrop" />
                 </androidx.cardview.widget.CardView>
 
                 <TextView
