--- a/app/src/main/res/layout/alert_progress.xml
+++ b/app/src/main/res/layout/alert_progress.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/aleet_tv"
+        android:id="@+id/alert_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="33dp"
