--- a/app/src/main/res/layout/activity_new_project.xml
+++ b/app/src/main/res/layout/activity_new_project.xml
@@ -40,7 +40,7 @@
             android:fontFamily="@font/lexenddeca"
             android:paddingTop="20dp"
             android:paddingBottom="0dp"
-            android:text="Add Project"
+            android:text="@string/add_project"
             android:textAlignment="center"
             android:textAllCaps="true"
             android:textColor="@color/dark_gray"
@@ -53,7 +53,7 @@
             android:id="@+id/project_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Project Name*"
+            android:hint="@string/project_name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:padding="20dp"
@@ -63,7 +63,8 @@
             android:id="@+id/project_budget"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Project Budget*"
+            android:hint="@string/project_budget"
+            android:inputType="number"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:padding="20dp"
@@ -73,17 +74,21 @@
             android:id="@+id/project_start_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Project Start Date*"
+            android:hint="@string/project_start_date"
+            android:focusable="false"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:padding="20dp"
+            android:imeOptions="actionDone"
             android:layout_margin="10dp"
             app:layout_constraintTop_toBottomOf="@id/project_budget"/>
         <EditText
             android:id="@+id/project_due_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Project Due Date*"
+            android:focusable="false"
+            android:hint="@string/project_due_date"
+            android:imeOptions="actionDone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:padding="20dp"
