--- a/app/src/main/res/menu/employee_select.xml
+++ b/app/src/main/res/menu/employee_select.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="Next"
+        android:title="@string/create"
         android:iconTint="@color/dark_gray"
         app:showAsAction="always" />
 </menu>
